# Blsimu

./: CMakeLists.txt  Makefile  README.md  _README.rtf  main.cpp  main.doprm  main.h  mainOriginal.cpp  readme.rtf  readme_blsimu_v1.3
Plnck/: readme
Plnck/include/: CLHEP_PhysicalConstants.h  CLHEP_SystemOfUnits.h  plnck.h
Witpy/: CMakeLists.txt  readme.rtf
Witpy/include/: witpy.h
Witpy/src/: SetDoPrm-99.cpp  SetDoPrm.cpp  SetDoPrm_maxBckUp.cpp
Witpy/srcPy/: readDoPrm.py
accelerator_data/CLS/Lattice/: CLSlattice09.xlsx  madxinp5269Appv3OK  readme.rtf
accelerator_data/CLS/Lattice/cooked/: CLSlattice09.doprm  CLSlattice09.doprmOriginal  RingOpt.doprm  readme.rtf
accelerator_data/CLS/Lattice/cooked/garb/: B位置.rtf  CLSlattice09.root  CLSlattice09.root-org  CLSlattice09.txt  Makefile  RingOpt.root  asc2rt.cpp  exe
accelerator_data/NS/newsubarustorageringlatticedata/: optics.doprm  readme.rtf
accelerator_data/NS/newsubarustorageringlatticedata/cooked/: RingOpt.root
accelerator_data/NS/newsubarustorageringlatticedata/renewsubarustorageringlatticedata/: optics_0.01m.txt  optics_0.05m.txt  optics_0.1m.txt
accelerator_data/SSRF/: tmp_opt.doprm
examples/NS/useBlsimu/: blsimu.doprm
examples/NS/useBlsimu/reference/: blsimu.root
examples/NS/useDrawSimu/: DrawSimu.doprm  FigGamma.doprm  FigGammaPad1.doprm  FigGammaPad2.doprm  FigGammaPad3.doprm  FigMacroExple.C  FigPtLong.doprm  FigPtLongMacro.C  FigPtLongPad1.doprm  FigPtTrans.doprm  FigPtTransPad1.doprm  FigPtTransPad2.doprm  FigPtTransPad3.doprm  FigPtTransPad4.doprm  FigPtTransPad5.doprm  FigPtTransPad6.doprm  FigPtTransPad7.doprm  FigPtTransPad8.doprm  Lattice.doprm
examples/SSRF_try/useBlsimu/: blsimu.doprm  blsimuout_read.doprm
examples/SSRF_try/useBlsimu/garb/: blsimu.doprm
garb/: CMakeCache.txt  CMakeLists.txt  CMakeListsOriginal.txt  _README.rtf
garb/Plnck/: Makefile  testConsts.cpp  testConsts_cxx
garb/Plnck/garb/: CMakeLists.txt  Constants.h  Makefile  Makefile_simplest
garb/Witpy/: CMakeLists.txt  Makefile  readme.rtf
garb/Witpy/include/: SetDoPrm.h  SetDoPrm_maxBckUp.h
garb/Witpy/srcPy/: readDoPrm_maxBckUp.py  readme.rtf
garb/Witpy/srcPy/garb/: readDoPrm.py
include/: Blsimu.h  EleTracer.h
src/: Blsimu.cpp  EleTracer.cpp
srcC/: bendmag.c  bmgen.c  compt.c  gauss.c  lattice.c  matrices.c  optics.c  readme.rtf  stdran48.c  tagger.c
versions/blsimu+/: Makefile  exe  main-99.cpp  main.cpp  main.h  readme.rtf
versions/blsimu+/garb/: blsimu.doprm  main.doprm  org_Useinp.doprm
versions/blsimu+/include/: EleTracer.h
versions/blsimu+/src/: EleTracer.cpp
versions/blsimu+/src-Corg/: eat_table_v21.c  gauss.c  main.c  matrices.c  optics.c  qfit.c
versions/blsimu+/src-Corg/inputNS/: tagger_bl31.txt
versions/blsimu+/src-Corg/inputNS/Ando/garb/: NS_Ando.lat
versions/blsimu+/srcC/: bmgen.c  compt.c  scat_points.c  stdran48.c
versions/blsimu+/srcC/garb/: read_opt.c
versions/blsimu+/v-100/: Makefile  exe  main.cpp  main.h  readme.rtf  run
versions/blsimu+/v-100/garb/: Useinp.txt  main のコピー.cpp  main-org.cpp
versions/blsimu+/v-100/src+/: bendmag.c  lattice.c  optics.c  tagger.c
versions/blsimu+/v-100/srcc/: bendmag.c  bmgen.c  compt.c  lattice.c  qfit2d.c  readinp.c  scat_points.c  stdran48.c  strtrim.c  tagger.c
versions/blsimu+/v-100/srcc/include/: const.h
versions/blsimu+/v-100/srcc/inputNS/: tagger_bl33.txt
versions/blsimu+/v-100/srcc/inputNS/Ando/garb/: NS_Ando.opt
